Add details about R15 variable.

--- a/play-launch-group.Rmd
+++ b/play-launch-group.Rmd
@@ -44,7 +44,17 @@ Open the project roster.
 
 ```{r open-roster-file}
 launch_group <- read.csv(paste0(csv.dir, "play-roster.csv"), stringsAsFactors = FALSE)
+```
 
+## Summarize characteristics of launch group members
+
+To determine R15 status, I compared list of institutions that are *ineligible* according to this list from NIH:
+
+<https://grants.nih.gov/grants/funding/R15_eligibility_2016-2017.pdf>
+
+I edited the play-roster.csv file accordingly.
+
+```{r launch-group-member-summaries}
 # New/Not_new
 launch_group %>% 
   group_by(New) %>% 
@@ -70,7 +80,6 @@ launch_group %>%
   knitr::kable()
 
 # R-15 eligible
-# Institution Type
 launch_group %>% 
   group_by(R15_eligible) %>% 
   summarise(N = n()) %>%
